<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/screen_horizontal_padding"
    android:paddingVertical="@dimen/screen_vertical_padding"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.SignInFragment">

    <ImageView
        android:id="@+id/img_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible"
        android:src="@drawable/left_arrow"
        android:contentDescription="@string/back"
        android:layout_width="@dimen/size_s"
        android:layout_height="@dimen/size_s"/>

    <TextView
        android:layout_marginTop="@dimen/size_m"
        android:id="@+id/textSignIn"
        android:textStyle="bold"
        android:textColor="@color/textPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/sign_in"
        android:textSize="@dimen/text_h1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textDetails"
        android:textSize="@dimen/text_h1"
        android:layout_marginTop="@dimen/size_m"
        android:text="@string/enter_your_details"
        android:textStyle="bold"
        android:textColor="@color/textPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textInstructions"
        android:textSize="@dimen/text_m"
        android:layout_marginTop="@dimen/size_s"
        android:text="@string/sign_into_your_with_your_registered_email_id_or_mobile_number"
        android:textColor="@color/textPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textEmail"
        app:layout_constraintTop_toBottomOf="@id/textInstructions"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/size_s"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorTextAppearance="@style/error_appearance"
        android:hint="@string/email_mobile_number">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:textSize="@dimen/text_m"
            android:layout_width="match_parent"
            android:inputType="text"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textPassword"
        app:layout_constraintTop_toBottomOf="@id/textEmail"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/space_l"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorTextAppearance="@style/error_appearance"
        app:passwordToggleEnabled="true"
        android:hint="@string/password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:textSize="@dimen/text_m"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvForgetPassword"
        android:layout_marginTop="@dimen/size_s"
        android:textSize="@dimen/text_m"
        android:textColor="@color/textPrimary"
        android:textStyle="bold"
        android:text="@string/forgot_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_marginStart="@dimen/space_l"
        android:layout_marginEnd="@dimen/space_l"
        android:layout_marginTop="@dimen/size_s"
        android:id="@+id/btnSignIn"
        android:text="@string/sign_in"
        android:padding="@dimen/space_m"
        android:textColor="@color/buttonText"
        android:background="@drawable/bg_button_primary_r_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvForgetPassword"
        android:textSize="@dimen/text_l"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="invisible"
        android:layout_marginStart="@dimen/space_m"
        android:layout_marginEnd="@dimen/space_m"
        app:layout_constraintTop_toBottomOf="@id/btnSignIn"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>