<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/screen_horizontal_padding"
    android:paddingVertical="@dimen/screen_vertical_padding"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.ResetPasswordFragment">

    <ImageView
        android:id="@+id/img_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/left_arrow"
        android:layout_width="@dimen/size_s"
        android:layout_height="@dimen/size_s"
        android:contentDescription="@string/back" />

    <TextView
        android:id="@+id/textSignup"
        android:textStyle="bold"
        android:textColor="@color/textPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/forgot_password"
        android:textSize="@dimen/text_h1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textTitle"
        android:text="@string/enter_email"
        android:textColor="@color/textPrimary"
        android:textStyle="bold"
        android:textSize="@dimen/text_h1"
        android:layout_marginTop="@dimen/size_s"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="@dimen/space_xxl"
        android:textSize="@dimen/text_m"
        android:textColor="@color/textPrimary"
        android:id="@+id/textDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTitle"
        android:text="@string/forgot_password_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textEmail"
        app:layout_constraintTop_toBottomOf="@id/textDescription"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/space_xxl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:textSize="@dimen/text_m"
            android:layout_width="match_parent"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.nymbleup.inventory.views.otpView.OtpTextView
        android:id="@+id/otpView"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textPrimary"
        app:bar_active_color="@color/white"
        app:bar_enabled="true"
        app:bar_error_color="@color/red"
        app:bar_height="0dp"
        app:bar_margin_bottom="0dp"
        app:bar_margin_left="2dp"
        app:bar_margin_right="2dp"
        app:bar_success_color="@color/green"
        app:box_margin="0dp"
        app:height="@dimen/otp_box"
        app:hide_otp="true"
        app:otp_box_background_active="@drawable/bg_box_active"
        app:otp_box_background="@drawable/bg_box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:length="4"
        app:otp=""
        app:otp_text_size="20dp"
        app:width="@dimen/otp_box" />


    <Button
        android:id="@+id/btnContinue"
        android:text="@string/continue_cap"
        android:padding="@dimen/space_m"
        android:layout_marginStart="@dimen/space_l"
        android:layout_marginEnd="@dimen/space_l"
        android:layout_marginBottom="@dimen/size_s"
        android:textColor="@color/buttonText"
        android:background="@drawable/bg_button_primary_r_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textStyle="bold"
        android:textSize="@dimen/text_l"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>