<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.StockFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/space_l"
        android:background="@color/black">

        <TextView
            android:id="@+id/tvTitle"
            android:text="@string/app_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/text_l"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/viewFilter"
        app:layout_constraintTop_toBottomOf="@id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/filter"
            layout="@layout/view_filter"/>

    </FrameLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/viewTotal"
        android:layout_marginTop="@dimen/space_s"
        app:layout_constraintTop_toBottomOf="@id/viewFilter"
        app:cardUseCompatPadding="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="@dimen/space_m"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvTotalTitle"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/total"
                android:textSize="@dimen/text_m"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvTotal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvTotalTitle"
                android:layout_marginStart="@dimen/space_s"
                android:textSize="@dimen/text_m"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_marginTop="@dimen/space_m"
                app:layout_constraintTop_toBottomOf="@id/tvTotalTitle"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvItemName"
                    android:text="@string/itemName"
                    android:textAllCaps="true"
                    android:textSize="@dimen/text_sm"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tvItemCount"
                    android:text="@string/count"
                    android:textAllCaps="true"
                    android:textSize="@dimen/text_sm"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:layout_weight="1.4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nvList"
        app:layout_constraintTop_toBottomOf="@id/viewTotal"
        app:layout_constraintBottom_toTopOf="@id/btnUpdate"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvList"
            tools:listitem="@layout/item_inventory"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>

    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/btnUpdate"
        android:text="@string/update"
        android:textColor="@color/white"
        android:textSize="@dimen/text_m"
        android:textStyle="bold"
        android:visibility="gone"
        android:background="@drawable/bg_button_primary_r_0"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:progressTint="@color/primary"
        android:backgroundTint="@color/white"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/viewFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>